// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<descriptions> demo: > render [align] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium">
      <div class="sd-descriptions-title">User Info</div>
      <div class="sd-descriptions-body">
        <table class="sd-descriptions-table">
          <tbody>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Name</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: right;" colspan="1">Socrates</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Mobile</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: right;" colspan="1">123-1234-1234</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Residence</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: right;" colspan="1">Beijing</td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Hometown</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: right;" colspan="1">Beijing</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Address</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: right;" colspan="3">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium">
      <div class="sd-descriptions-title">User Info</div>
      <div class="sd-descriptions-body">
        <table class="sd-descriptions-table">
          <tbody>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Name</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Socrates</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Mobile</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">123-1234-1234</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Residence</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Hometown</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: right;">Address</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">Yingdu Building, Zhichun Road, Beijing</td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-descriptions sd-descriptions-layout-inline-vertical sd-descriptions-size-medium">
      <div class="sd-descriptions-title">User Info</div>
      <div class="sd-descriptions-body">
        <table class="sd-descriptions-table">
          <tbody>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Name</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Socrates</div>
              </td>
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Mobile</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">123-1234-1234</div>
              </td>
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Residence</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
              </td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Hometown</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
              </td>
              <td class="sd-descriptions-item" colspan="2">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Address</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<descriptions> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-descriptions sd-descriptions-layout-inline-horizontal sd-descriptions-size-medium">
      <div class="sd-descriptions-title">User Info</div>
      <div class="sd-descriptions-body">
        <table class="sd-descriptions-table">
          <tbody>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item" colspan="3">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Name</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Socrates</div>
              </td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Mobile</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">123-1234-1234</div>
              </td>
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Residence</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
              </td>
              <td class="sd-descriptions-item" colspan="1">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Hometown</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
              </td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item" colspan="3">
                <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Address</div>
                <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Yingdu Building, Zhichun Road, Beijing</div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium">
      <div class="sd-descriptions-title">User Info</div>
      <div class="sd-descriptions-body">
        <table class="sd-descriptions-table">
          <tbody>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Name</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="5"><span class="sd-tag sd-tag-size-medium sd-tag-checked"><!--v-if-->Socrates<!--v-if--><!--v-if--></span></td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Mobile</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1"><span class="sd-tag sd-tag-size-medium sd-tag-checked"><!--v-if-->123-1234-1234<!--v-if--><!--v-if--></span></td>
            </tr>
            <tr class="sd-descriptions-row">
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Residence</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1"><span class="sd-tag sd-tag-size-medium sd-tag-checked"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Hometown</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1"><span class="sd-tag sd-tag-size-medium sd-tag-checked"><!--v-if-->Beijing<!--v-if--><!--v-if--></span></td>
              <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Address</td>
              <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3"><span class="sd-tag sd-tag-size-medium sd-tag-checked"><!--v-if-->Yingdu Building, Zhichun Road, Beijing<!--v-if--><!--v-if--></span></td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<descriptions> demo: > render [bordered] correctly 1`] = `
<div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium sd-descriptions-border">
  <div class="sd-descriptions-title">User Info</div>
  <div class="sd-descriptions-body">
    <table class="sd-descriptions-table">
      <tbody>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Name</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Socrates</td>
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Mobile</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">123-1234-1234</td>
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Residence</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
        </tr>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Hometown</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Address</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<descriptions> demo: > render [example] correctly 1`] = `
<form class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width">
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->size
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">mini</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">large</span></label></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->layout
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="horizontal"><span class="sd-radio-button-content">horizontal</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="inline-horizontal"><span class="sd-radio-button-content">inline-horizontal</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="vertical"><span class="sd-radio-button-content">vertical</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="inline-vertical"><span class="sd-radio-button-content">inline-vertical</span></label></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->table-layout
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="auto"><span class="sd-radio-button-content">auto</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="fixed"><span class="sd-radio-button-content">fixed</span></label></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->column
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="1"><span class="sd-radio-button-content">1</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="2"><span class="sd-radio-button-content">2</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="3"><span class="sd-radio-button-content">3</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="4"><span class="sd-radio-button-content">4</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="5"><span class="sd-radio-button-content">5</span></label></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->firstSpan
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="1"><span class="sd-radio-button-content">1</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="2"><span class="sd-radio-button-content">2</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="3"><span class="sd-radio-button-content">3</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="4"><span class="sd-radio-button-content">4</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="5"><span class="sd-radio-button-content">5</span></label></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</form>
<div class="sd:mt-5">
  <div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium sd-descriptions-border">
    <div class="sd-descriptions-title">Layout Example</div>
    <div class="sd-descriptions-body">
      <table class="sd-descriptions-table">
        <tbody>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item1</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">
              <div>Span：2
                <!--v-if-->
              </div>
            </td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item2</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">Span：2</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item3</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="7">Span：3</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item4</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">Span：2</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item5</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Span：1</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Item6</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Span：1</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<descriptions> demo: > render [layout] correctly 1`] = `
<span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">mini</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">large</span></label></span>
<div class="sd:mt-5">
  <div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium sd-descriptions-border">
    <div class="sd-descriptions-title">User Info (horizontal)</div>
    <div class="sd-descriptions-body">
      <table class="sd-descriptions-table">
        <tbody>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Name</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Socrates</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Mobile</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">123-1234-1234</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Residence</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Hometown</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Address</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="3">Yingdu Building, Zhichun Road, Beijing</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="sd-descriptions sd-descriptions-layout-inline-horizontal sd-descriptions-size-medium sd-descriptions-border">
    <div class="sd-descriptions-title">User Info (inline-horizontal)</div>
    <div class="sd-descriptions-body">
      <table class="sd-descriptions-table">
        <tbody>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Name</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Socrates</div>
            </td>
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Mobile</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">123-1234-1234</div>
            </td>
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Residence</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
            </td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Hometown</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
            </td>
            <td class="sd-descriptions-item" colspan="2">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Address</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Yingdu Building, Zhichun Road, Beijing</div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="sd-descriptions sd-descriptions-layout-vertical sd-descriptions-size-medium sd-descriptions-border">
    <div class="sd-descriptions-title">User Info (vertical)</div>
    <div class="sd-descriptions-body">
      <table class="sd-descriptions-table">
        <tbody>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;" colspan="1">Name</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;" colspan="1">Mobile</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;" colspan="1">Residence</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Socrates</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">123-1234-1234</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;" colspan="1">Hometown</td>
            <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;" colspan="2">Address</td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
            <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="2">Yingdu Building, Zhichun Road, Beijing</td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div class="sd-descriptions sd-descriptions-layout-inline-vertical sd-descriptions-size-medium sd-descriptions-border">
    <div class="sd-descriptions-title">User Info (inline-vertical)</div>
    <div class="sd-descriptions-body">
      <table class="sd-descriptions-table">
        <tbody>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Name</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Socrates</div>
            </td>
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Mobile</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">123-1234-1234</div>
            </td>
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Residence</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
            </td>
          </tr>
          <tr class="sd-descriptions-row">
            <td class="sd-descriptions-item" colspan="1">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Hometown</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Beijing</div>
            </td>
            <td class="sd-descriptions-item" colspan="2">
              <div class="sd-descriptions-item-label sd-descriptions-item-label-inline" style="text-align: left;">Address</div>
              <div class="sd-descriptions-item-value sd-descriptions-item-value-inline" style="text-align: left;">Yingdu Building, Zhichun Road, Beijing</div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<descriptions> demo: > render [single] correctly 1`] = `
<span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="mini"><span class="sd-radio-button-content">mini</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">large</span></label></span>
<div class="sd-descriptions sd-descriptions-layout-horizontal sd-descriptions-size-medium sd:mt-5">
  <div class="sd-descriptions-title">User Info</div>
  <div class="sd-descriptions-body">
    <table class="sd-descriptions-table">
      <tbody>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Name</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Socrates</td>
        </tr>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Mobile</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">123-1234-1234</td>
        </tr>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Residence</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
        </tr>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Hometown</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Beijing</td>
        </tr>
        <tr class="sd-descriptions-row">
          <td class="sd-descriptions-item-label sd-descriptions-item-label-block" style="text-align: left;">Address</td>
          <td class="sd-descriptions-item-value sd-descriptions-item-value-block" style="text-align: left;" colspan="1">Yingdu Building, Zhichun Road, Beijing</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
